# Self_Driving_Cars

./: .gitignore  Dockerfile.single  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.mlflow  agent.py  alembic.ini  app.py  benchmark.py  db.py  env_highway.py  env_sim.py  evaluate.py  event_bus.py  experiment_tracker.py  models.py  requirements-docker.txt  requirements.txt  trainer_manager.py  trainer_worker.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 20260604_0001_initial_research_schema.py
backend/static/: placeholder.txt
backend/tests/: test_agent.py  test_db_schema.py  test_env_highway.py  test_experiment_tracker.py
datasets/: __init__.py  data_loader.py  data_logger.py
docs/: deployment-railway.md  deployment-render-single-service.md  deployment-render.md
frontend/: Dockerfile  package-lock.json  package.json  server.js  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: wsClient.js
frontend/src/components/: Dashboard.jsx  EpisodeSummary.jsx  ErrorPopup.jsx  FPSCounter.jsx  Gauge.jsx  LogsPanel.jsx  MetricCard.jsx  RewardChart.jsx  Speedometer.jsx  TrackView.jsx  WSIndicator.jsx
scripts/: start_backend.sh  start_frontend.sh  start_trainer.sh
